--- a/index.html
+++ b/index.html
@@ -107,9 +107,8 @@
       <div class="profile list">
         <strong>Profile</strong>
         <ul>
-          <li>Over the last few years, I hopped between the roles of team lead, scrum master, and design lead, mostly as an individual contributor.</li>
-          <li>My Gallup's CliftonStrengths are Restorative, Intellection, Consistency, Harmony, Input – and have been consistent across my career.</li>
-          <li>Currently hosting <a href="http://designsystems.berlin" target="_blank">Design Systems Berlin</a></li>
+          <li>Over the last few years, I hopped between the roles of team lead, scrum master, and design lead, mostly as an individual contributor and project leader.</li>
+          <li>My Gallup's <a href="https://www.gallup.com/cliftonstrengths" target="_blank">CliftonStrengths</a> are Restorative, Intellection, Consistency, Harmony, and Input, which have been consistent across my career.</li>
         </ul>
       </div>
     </section>
@@ -212,11 +211,11 @@
       </div>
       <div class="currently list">
         <strong>Currently 👨🏻‍💻</strong>
-        <p>Product design and enablement at Contentful, currently focused on design systems, editorial experience, and thought leadership.</p>
+        <p>Product design and enablement at Contentful, lately focused on design systems, editorial experience, and thought leadership. Currently hosting <a href="http://designsystems.berlin" target="_blank">Design Systems Berlin</a></p>
       </div>
       <div class="personal list">
         <strong>About 🧭</strong>
-        <p>Husband and father, with a knack for calisthenics, board riding, and early mornings. Relentless weekend traveller.</p>
+        <p>Husband and father, with a knack for calisthenics, board riding, woodworking, and early mornings. Relentless weekend traveller.</p>
       </div>
     </section>
 
