Update tools and profile

--- a/index.html
+++ b/index.html
@@ -90,25 +90,27 @@
         <strong>Key tools</strong>
         <ul>
           <li>Design studio</li>
+          <li>Rapid prototyping</li>
           <li>Concept mapping</li>
           <li>Directed storytelling</li>
           <li>Mindmapping</li>
           <li>Participatory design</li>
-          <li>Role-playing</li>
+          <li>Customer interviews</li>
           <li>Scenario mapping</li>
           <li>Empathy mapping</li>
           <li>Stakeholder mapping</li>
           <li>Journey mapping</li>
           <li>Consequence mapping</li>
           <li>Value prop. canvas</li>
+          <li>Usability testing</li>
           <li>Task analysis</li>
         </ul>
       </div>
       <div class="profile list">
         <strong>Profile</strong>
         <ul>
-          <li>Over the last few years, I hopped between the roles of team lead, scrum master, and design lead, mostly as an individual contributor and project leader.</li>
-          <li>My Gallup's <a href="https://www.gallup.com/cliftonstrengths" target="_blank">CliftonStrengths</a> are Restorative, Intellection, Consistency, Harmony, and Input, which have been consistent across my career.</li>
+          <li>Over the last years I hopped between the roles of team lead, scrum master, and design lead, mostly as an individual contributor and project leader. I'm experienced both with hands on and orchestration work.</li>
+          <li>My Gallup's <a href="https://www.gallup.com/cliftonstrengths" target="_blank">CliftonStrengths</a> are Restorative, Context, Intellection, Positivity, and Learner, a score that has been consistent across my career.</li>
         </ul>
       </div>
     </section>
