Fix spacing and headlines

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hi there, I'm João 👋</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="I’m a designer who drives collaboration and alignment in teams, using facilitation and systems thinking">
+    <meta name="description" content="Product Design Lead who drives teams using facilitation and systems thinking">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
     <meta name="cf-2fa-verify" content="7becfc173519c75">
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
     <meta name="twitter:title" content="João – Product Design Lead" />
-    <meta name="twitter:description" content="I’m a designer who drives collaboration and alignment in teams, using facilitation and systems thinking" />
+    <meta name="twitter:description" content="Product Design Lead who drives teams using facilitation and systems thinking" />
     <meta name="twitter:image" content="https://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="https://joao.pt" />
 
@@ -29,7 +29,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://joao.pt/" />
     <meta property="og:image" content="https://joao.pt/images/profile.jpg" />
-    <meta property="og:description" content="I’m a designer who drives collaboration and alignment in teams, using facilitation and systems thinking" />
+    <meta property="og:description" content="Product Design Lead who drives teams using facilitation and systems thinking" />
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
