Switch main with section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   </head>
   <body>
-    <main>
+    <section>
       <h1>I’m a design lead and mentor who guides teams using systems thinking and a dash of humour</h1>
       
       <div class="wrapper triad">
@@ -97,11 +97,11 @@
           <p>Lately, I've been focusing on strategy, design leadership and culture, and resolving ambiguity across teams and customer propositions.</p>
         </div>
       </div>
-    </main>
+    </section>
 
     <img src="images/picture.jpg" alt="" class="casual" />
     
-    <main>
+    <section>
       <h2>Are you a designer with a struggle you can’t quite get around?</h2>
 
       <div class="wrapper dual">
@@ -131,9 +131,9 @@
           <a href="https://joaotiago.medium.com/" target="_blank">See all articles</a>
         </div>
       </div>
-    </main>
+    </section>
 
-    <main class="inverted">
+    <section class="inverted">
       <div class="wrapper triad">
         <p class="block heading">Life and career journeys are typically not linear. At 18, I was studying abroad to become a medical student. These are a few bits and pieces of the journey that led me here. </p>
         <div class="block">
@@ -171,7 +171,7 @@
           <p>Leading People and Teams, from the Michigan University; Certified Scrum Product Owner® (CSPO®), from the Scrum Alliance.</p>
         </div>
       </div>
-    </main>
+    </section>
 
     <script>
       window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
