Add links and footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
     <meta name="cf-2fa-verify" content="7becfc173519c75">
-    <meta name="theme-color" content="#222222">
+    <meta name="theme-color" content="#f4f4f2">
 
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -108,7 +108,7 @@
         <div class="adplist block">
           <h3>Mentoring</h3>
           <p>Give me a shout if you wish to level up your stakeholder management game, use systems thinking to elevate your work, get more efficient at moderation, or simply share a challenge at work.</p>
-          <p>I offer 30 minute mentoring sessions for free on ADPList and I already had the please of helping other Product Designers develop confidence in key skills, land new or even first jobs, or experiment with new tools and methods at work.</p>
+          <p>I offer 30 minute mentoring sessions for free on <a href="https://adplist.org/mentors/joao-ramos" target="_blank">ADPList</a> and I already had the please of helping other Product Designers develop confidence in key skills, land new or even first jobs, or experiment with new tools and methods at work.</p>
           <a href="https://adplist.org/mentors/joao-ramos" target="_blank">Book a session</a>
         </div>
         <div class="writing block">
@@ -153,14 +153,14 @@
         </div>
         <div class="block">
           <h4>CBS</h4>
-          <p>While in Copenhagen, I ran a "Communication Strategy, Online Media Marketing and Strategic Planning" practical course for a Master's degree class at the Copenhagen Business School.</p>
+          <p>While in Copenhagen, I ran a "Communication Strategy, Online Media Marketing and Strategic Planning" practical course for a Master's degree class at the Copenhagen Business School (CBS).</p>
         </div>
       </div>
 
       <div class="wrapper triad">
         <div class="block">
           <h4>Design systems</h4>
-          <p>During my journey in DesignOps, I helped fund and create the first design system at Contentful. I hosted Design Systems Berlin for a while, too.</p>
+          <p>During my journey in DesignOps, I helped fund and create the first <a href="https://f36.contentful.com/">design system at Contentful</a>. I hosted <a href="http://designsystems.berlin/">Design Systems Berlin</a> for a while, too.</p>
         </div>
         <div class="block">
           <h4>Strengths</h4>
@@ -171,6 +171,11 @@
           <p>Leading People and Teams, from the Michigan University; Certified Scrum Product Owner® (CSPO®), from the Scrum Alliance.</p>
         </div>
       </div>
+
+      <footer class="wrapper">
+        <img src="https://joao.pt/images/profile.jpg" alt="">
+        <p>João Ramos © All rights reserved. Find me on <a href="https://www.instagram.com/its.joaoramos/" target="_blank">Instagram</a>, <a href="https://www.linkedin.com/in/johnzramos/" target="_blank">LinkedIn</a>, <a href="https://joaotiago.medium.com/" target="_blank">Medium</a>, <a href="https://soundcloud.com/itsjoaoramos" target="_blank">SoundCloud</a>, <a href="https://twitter.com/joaotiago" target="_blank">Twitter</a>, or <a href="https://github.com/joaoramos" target="_blank">Github</a>.</p>
+      </footer>
     </section>
 
     <script>
