Use local profile picture

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       </div>
 
       <footer class="wrapper">
-        <img src="https://joao.pt/images/profile.jpg" alt="">
+        <img src="images/profile.jpg" alt="">
         <p>João Ramos © All rights reserved. Find me on <a href="https://www.instagram.com/its.joaoramos/" target="_blank">Instagram</a>, <a href="https://www.linkedin.com/in/johnzramos/" target="_blank">LinkedIn</a>, <a href="https://joaotiago.medium.com/" target="_blank">Medium</a>, <a href="https://soundcloud.com/itsjoaoramos" target="_blank">SoundCloud</a>, <a href="https://twitter.com/joaotiago" target="_blank">Twitter</a>, or <a href="https://github.com/joaoramos" target="_blank">Github</a>.</p>
       </footer>
     </section>
