--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
         <div class="writing block">
           <h3>Selected writing</h3>
           <ol>
+            <li class="zalando">
+              <em><a href="https://medium.com/zalando-design/a-day-of-bringing-out-the-best-in-others-5ab8a6831049" target="_blank">A day of bringing out the best in others</a></em>
+              <span>Step into the shoes of Senior Product Designer and passionate mentor, João Ramos, who leads projects in our Customer Acquisition Experience team.</span>
+            </li>
             <li class="uxplanet">
               <em><a href="https://uxplanet.org/five-books-that-helped-me-become-a-better-product-designer-6fd366ce8395?source=friends_link&sk=eed2614428725420af4219d0f1888b88" target="_blank">Five books that helped me become a better Product Designer</a></em>
               <span>A short reading list to cultivate crucial skills in demand</span>
@@ -121,10 +125,6 @@
             <li class="uxcollective">
               <em><a href="https://uxdesign.cc/ways-to-add-perspective-in-design-8cae9852c36a?source=friends_link&sk=d1be79496b334af476f5163ec2ada169" target="_blank">Ways to add perspective in design</a></em>
               <span>Three design methods for a more comprehensive practice</span>
-            </li>
-            <li class="contentful">
-              <em><a href="https://medium.com/contentful-design/empathy-as-a-tool-for-alignment-9f6c12b401db?source=friends_link&sk=ef4206e55447c4a0c0aaf7cd9b38a6f5" target="_blank">Empathy as a tool for alignment</a></em>
-              <span>The importance of developing empathy with internal stakeholders</span>
             </li>
           </ol>
           <br>
