--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>João Ramos – Product Design Lead</title>
+    <title>João Ramos – Design Lead & Mentor</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="I’m a design lead and mentor who guides teams using systems thinking and a dash of humour">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,13 +21,13 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
-    <meta name="twitter:title" content="João Ramos – Product Design Lead" />
+    <meta name="twitter:title" content="João Ramos – Design Lead & Mentor" />
     <meta name="twitter:description" content="I’m a design lead and mentor who guides teams using systems thinking and a dash of humour" />
     <meta name="twitter:image" content="https://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="https://joao.pt" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="João Ramos – Product Design Lead" />
+    <meta property="og:title" content="João Ramos – Design Lead & Mentor" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://joao.pt/" />
     <meta property="og:image" content="https://joao.pt/images/profile.jpg" />
@@ -71,6 +71,7 @@
           <h3>Experience</h3>
           <ol>
             <li class="zalando">
+              <span class="role">Design Manager</span>
               <span class="role">Sr. Product Designer</span>
               <span class="employer">Zalando, Berlin</span>
               <span class="date">2021 – Now</span>
