Replace Google Analytics with umami

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <meta name="apple-mobile-web-app-title" content="">
     <meta name="mobile-web-app-capable" content="yes">
 
+    <!-- Umami -->
+    <script async defer data-website-id="beb91a7e-9716-4c52-a7c2-cd722e3b257b" src="https://umami-joao.up.railway.app/umami.js"></script>
+
   </head>
   <body>
     <section>
@@ -178,15 +181,6 @@
         <p>João Ramos © All rights reserved. Find me on <a href="https://www.instagram.com/its.joaoramos/" target="_blank">Instagram</a>, <a href="https://www.linkedin.com/in/johnzramos/" target="_blank">LinkedIn</a>, <a href="https://joaotiago.medium.com/" target="_blank">Medium</a>, <a href="https://soundcloud.com/itsjoaoramos" target="_blank">SoundCloud</a>, <a href="https://twitter.com/joaotiago" target="_blank">Twitter</a>, or <a href="https://github.com/joaoramos" target="_blank">Github</a>.</p>
       </footer>
     </section>
-
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3813449-21"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-3813449-21');
-    </script>
     
 </body>
 </html>
