--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       
       <div class="wrapper triad">
         <p class="heading">At work, I'm at my best leveraging design articulation, connecting stakeholders with diagrams and design decks, and resolving ambiguity</p>
-        <p>Yet first and foremost, I'm a husband and father with a knack for calisthenics, board riding, woodworking, graphic novels, and music making</p>
+        <p>I'm based in Berlin (Germany) with my wife, daughter, and <a href="https://www.instagram.com/itsgloriathedog/" target="_blank">mutt</a>, and I have a knack for watching sunrises, reading about anthropology, riding boards, asking difficult questions, and making music and videos.</p>
       </div>
       
       <div class="wrapper triad">
@@ -98,7 +98,7 @@
         <div class="profile block">
           <h3>Profile</h3>
           <p>Over the last decade I hopped between the roles of embedded product designer, project and design lead, and design mentor.</p>
-          <p>Lately, I've been focusing on strategy, design leadership and culture, and resolving ambiguity across teams and customer propositions.</p>
+          <p>Lately, I've been focusing on strategy, design leadership and culture, and resolving ambiguity across different teams and business units.</p>
         </div>
       </div>
     </section>
@@ -112,7 +112,7 @@
         <div class="adplist block">
           <h3>Mentoring</h3>
           <p>Give me a shout if you wish to level up your stakeholder management game, use systems thinking to elevate your work, get more efficient at moderation, or simply share a challenge at work.</p>
-          <p>I offer 30 minute mentoring sessions for free on <a href="https://adplist.org/mentors/joao-ramos" target="_blank">ADPList</a> and I already had the please of helping other Product Designers develop confidence in key skills, land new or even first jobs, or experiment with new tools and methods at work.</p>
+          <p>I offer 30 minute mentoring sessions for free on <a href="https://adplist.org/mentors/joao-ramos" target="_blank">ADPList</a> and already had the pleasure of helping other Product Designers develop confidence in key skills, land new or even first jobs, and experiment with new tools and methods at work.</p>
           <a href="https://adplist.org/mentors/joao-ramos" target="_blank">Book a session</a>
         </div>
         <div class="writing block">
@@ -139,10 +139,10 @@
 
     <section class="inverted">
       <div class="wrapper triad">
-        <p class="block heading">Life and career journeys are typically not linear. At 18, I was studying abroad to become a medical student. These are a few bits and pieces of the journey that led me here. </p>
+        <p class="block heading">Life journeys and career trajectories are never really linear. At 18, I was studying abroad to become a medical student. These are a few bits and pieces of the journey that led me here. </p>
         <div class="block">
           <h4>Early beginning</h4>
-          <p>The first sparks I can remember from the early 2000s were writing conversational eggdrops for IRC with Tcl scripting and designing Flash clips. That's how I earned my first cash, too!</p>
+          <p>The first sparks I can remember from the early 2000s were writing chat bots for IRC with Tcl scripting and designing little Flash clips and games. That's how I earned my first cash, too!</p>
         </div>
       </div>
 
@@ -164,7 +164,7 @@
       <div class="wrapper triad">
         <div class="block">
           <h4>Design systems</h4>
-          <p>During my journey in DesignOps, I helped fund and create the first <a href="https://f36.contentful.com/">design system at Contentful</a>. I hosted <a href="http://designsystems.berlin/">Design Systems Berlin</a> for a while, too.</p>
+          <p>During my journey in DesignOps, I helped establish the first <a href="https://f36.contentful.com/" target="_blank">design system at Contentful</a>. I hosted <a href="http://designsystems.berlin/">Design Systems Berlin</a> for a while, too.</p>
         </div>
         <div class="block">
           <h4>Strengths</h4>
