Update tracking code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta name="mobile-web-app-capable" content="yes">
 
     <!-- Umami -->
-    <script async defer data-website-id="beb91a7e-9716-4c52-a7c2-cd722e3b257b" src="https://umami-joao.up.railway.app/umami.js"></script>
+    <script async defer data-website-id="7dcb497a-5bc7-44f1-bb1f-26e9f15f1cdf" src="https://umami-joao.netlify.app/umami.js"></script>
 
   </head>
   <body>
