--- a/index.html
+++ b/index.html
@@ -54,20 +54,19 @@
       
       <div class="wrapper triad">
         <div class="tools block">
-          <h3>Design tools</h3>
+          <h3>Toolbox</h3>
           <ul>
-            <li>Design studio</li>
-            <li>Rapid prototyping</li>
-            <li>Concept mapping</li>
-            <li>Mindmapping</li>
-            <li>Participatory design</li>
-            <li>Scenario mapping</li>
-            <li>Empathy mapping</li>
-            <li>Stakeholder mapping</li>
-            <li>Journey mapping</li>
-            <li>Futures wheel</li>
-            <li>User testing</li>
+            <li>Coaching</li>
             <li>Systems mapping</li>
+            <li>Diagramming</li>
+            <li>Mindmapping</li>
+            <li>Rapid prototyping</li>
+            <li>Scenario mapping</li>
+            <li>Journey mapping</li>
+            <li>Concept mapping</li>
+            <li>Participatory design</li>
+            <li>Stakeholder mapping</li>
+            <li>Futures wheel</li>
           </ul>
         </div>
         <div class="experience block">
