--- a/index.html
+++ b/index.html
@@ -72,23 +72,22 @@
         <div class="experience block">
           <h3>Experience</h3>
           <ol>
+            <li class="n8n">
+              <span class="role">Head of Design</span>
+              <span class="employer">n8n, Berlin</span>
+              <span class="date">2022 – Now</span>
+            </li>
             <li class="zalando">
               <span class="role">Design Manager</span>
               <span class="role">Sr. Product Designer</span>
               <span class="employer">Zalando, Berlin</span>
-              <span class="date">2021 – Now</span>
+              <span class="date">2021 – 2022</span>
             </li>
             <li class="contentful">
               <span class="role">Sr. Product Designer</span>
               <span class="role">Product Designer</span>
               <span class="employer">Contentful, Berlin</span>
               <span class="date">2016 — 2021</span>
-            </li>
-            <li class="sumup">
-              <span class="role">Design Lead</span>
-              <span class="role">Full-stack designer</span>
-              <span class="employer">SumUp, Berlin</span>
-              <span class="date">2014 — 2016</span>
             </li>
           </ol>
           <br>
