--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h3>Experience</h3>
           <ol>
             <li class="n8n">
-              <span class="role">Head of Design</span>
+              <span class="role">Head of Product Design</span>
               <span class="employer">n8n, Berlin</span>
               <span class="date">2022 – Now</span>
             </li>
