--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <span class="date">2022 – Now</span>
             </li>
             <li class="zalando">
-              <span class="role">Design Manager</span>
+              <span class="role">Product Design Manager</span>
               <span class="role">Sr. Product Designer</span>
               <span class="employer">Zalando, Berlin</span>
               <span class="date">2021 – 2022</span>
