--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
         <div class="block">
           <h4>Latest training</h4>
-          <p>Leading People and Teams, from the Michigan University; Certified Scrum Product Owner® (CSPO®), from the Scrum Alliance.</p>
+          <p><a href="https://ideou.novoed.com/#!/courses/systems-nov10-dec18/statements/2911120" class="umami--click-training-ideou" target="">Human-Centered Systems Thinking</a> from IDEO U, and <a href="https://online.umich.edu/series/leading-people-and-teams/" class="umami--click-training-umich" target="_blank">Leading People and Teams</a>,from the Michigan University.</p>
         </div>
       </div>
 
