--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>João Ramos – Design lead & mentor</title>
+    <title>João Ramos – Design manager & mentor</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="I’m a design lead and mentor who guides teams using systems thinking and a dash of humour">
+    <meta name="description" content="I’m a design manager and mentor who guides teams using systems thinking and a dash of humour">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
     <meta name="cf-2fa-verify" content="7becfc173519c75">
@@ -21,17 +21,17 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
-    <meta name="twitter:title" content="João Ramos – Design lead & mentor" />
-    <meta name="twitter:description" content="I’m a design lead and mentor who guides teams using systems thinking and a dash of humour" />
+    <meta name="twitter:title" content="João Ramos – Design manager & mentor" />
+    <meta name="twitter:description" content="I’m a design manager and mentor who guides teams using systems thinking and a dash of humour" />
     <meta name="twitter:image" content="https://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="https://joao.pt" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="João Ramos – Design lead & mentor" />
+    <meta property="og:title" content="João Ramos – Design manager & mentor" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://joao.pt/" />
     <meta property="og:image" content="https://joao.pt/images/profile.jpg" />
-    <meta property="og:description" content="I’m a design lead and mentor who guides teams using systems thinking and a dash of humour" />
+    <meta property="og:description" content="I’m a design manager and mentor who guides teams using systems thinking and a dash of humour" />
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -45,7 +45,7 @@
   </head>
   <body>
     <section>
-      <h1>I’m a design lead and mentor who guides teams using systems thinking and a dash of humour</h1>
+      <h1>I’m a design manager and mentor who guides teams using systems thinking and a dash of humour</h1>
       
       <div class="wrapper triad">
         <p class="heading">At work, I'm at my best leveraging design articulation, connecting stakeholders with diagrams and design decks, and resolving ambiguity</p>
@@ -176,7 +176,7 @@
 
       <footer class="wrapper">
         <img src="images/profile.jpg" alt="">
-        <p>João Ramos © All rights reserved. Find me on <a href="https://www.instagram.com/its.joaoramos/" class="umami--click--instagram" target="_blank">Instagram</a>, <a href="https://www.linkedin.com/in/johnzramos/" class="umami--click--linkedin" target="_blank">LinkedIn</a>, <a href="https://joaotiago.medium.com/" class="umami--click--medium" target="_blank">Medium</a>, <a href="https://soundcloud.com/itsjoaoramos" class="umami--click--soundcloud" target="_blank">SoundCloud</a>, <a href="https://twitter.com/joaotiago" class="umami--click--twitter" target="_blank">Twitter</a>, or <a href="https://github.com/joaoramos" class="umami--click--github" target="_blank">Github</a>.</p>
+        <p>João Ramos © All rights reserved. Find me on <a href="https://www.instagram.com/its.joaoramos/" class="design" target="_blank">Instagram</a>, <a href="https://www.linkedin.com/in/johnzramos/" class="umami--click--linkedin" target="_blank">LinkedIn</a>, <a href="https://joaotiago.medium.com/" class="umami--click--medium" target="_blank">Medium</a>, <a href="https://soundcloud.com/itsjoaoramos" class="umami--click--soundcloud" target="_blank">SoundCloud</a>, <a href="https://twitter.com/joaotiago" class="umami--click--twitter" target="_blank">Twitter</a>, or <a href="https://github.com/joaoramos" class="umami--click--github" target="_blank">Github</a>.</p>
       </footer>
     </section>
     
