--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
         <div class="experience block">
           <h3>Experience</h3>
           <ol>
+            <li class="zalando-new">
+              <span class="role">Product Design Manager</span>
+              <span class="employer">Zalando, Berlin</span>
+              <span class="date">2023 – Now</span>
+            </li>
             <li class="n8n">
               <span class="role">Head of Product Design</span>
               <span class="employer">n8n, Berlin</span>
-              <span class="date">2022 – Now</span>
+              <span class="date">2022 – 2023</span>
             </li>
             <li class="zalando">
               <span class="role">Product Design Manager</span>
@@ -83,19 +88,19 @@
               <span class="employer">Zalando, Berlin</span>
               <span class="date">2021 – 2022</span>
             </li>
-            <li class="contentful">
+            <!-- <li class="contentful">
               <span class="role">Sr. Product Designer</span>
               <span class="role">Product Designer</span>
               <span class="employer">Contentful, Berlin</span>
               <span class="date">2016 — 2021</span>
-            </li>
+            </li> -->
           </ol>
           <br>
           <a href="https://www.linkedin.com/in/johnzramos/" class="umami--click--linkedin-experience" target="_blank">More on LinkedIn</a>
         </div>
         <div class="profile block">
           <h3>Profile</h3>
-          <p>Over the last decade I hopped between the roles of embedded product designer, project and design lead, and design mentor.</p>
+          <p>Over the last decade I hopped between the roles of embedded product designer, project and design lead, and design manager.</p>
           <p>Lately, I've been focusing on strategy, design leadership and culture, and resolving ambiguity across different teams and business units.</p>
         </div>
       </div>
