Update tracking code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta name="mobile-web-app-capable" content="yes">
 
     <!-- Umami -->
-    <script async defer data-website-id="4d4f157e-d006-47fc-8310-23f87f2f6ac1" src="https://umami.joao.pt/umami.js"></script>
+    <script async src="https://umami.joao.pt/script.js" data-website-id="4d4f157e-d006-47fc-8310-23f87f2f6ac1"></script>
 
   </head>
   <body>
