Update Iinstagram handle

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
       <footer class="wrapper">
         <img src="images/profile.jpg" alt="">
-        <p>João Ramos © All rights reserved. Find me on <a href="https://www.instagram.com/its.joaoramos/" class="design" target="_blank">Instagram</a>, <a href="https://www.linkedin.com/in/johnzramos/" class="umami--click--linkedin" target="_blank">LinkedIn</a>, <a href="https://joaotiago.medium.com/" class="umami--click--medium" target="_blank">Medium</a>, <a href="https://soundcloud.com/itsjoaoramos" class="umami--click--soundcloud" target="_blank">SoundCloud</a>, <a href="https://twitter.com/joaotiago" class="umami--click--twitter" target="_blank">Twitter</a>, or <a href="https://github.com/joaoramos" class="umami--click--github" target="_blank">Github</a>.</p>
+        <p>João Ramos © All rights reserved. Find me on <a href="https://www.instagram.com/hey.joao.pt/" class="design" target="_blank">Instagram</a>, <a href="https://www.linkedin.com/in/johnzramos/" class="umami--click--linkedin" target="_blank">LinkedIn</a>, <a href="https://joaotiago.medium.com/" class="umami--click--medium" target="_blank">Medium</a>, <a href="https://soundcloud.com/itsjoaoramos" class="umami--click--soundcloud" target="_blank">SoundCloud</a>, <a href="https://twitter.com/joaotiago" class="umami--click--twitter" target="_blank">Twitter</a>, or <a href="https://github.com/joaoramos" class="umami--click--github" target="_blank">Github</a>.</p>
       </footer>
     </section>
     
