Improve overall copy

--- a/index.html
+++ b/index.html
@@ -152,22 +152,22 @@
       <div class="wrapper triad">
         <div class="block">
           <h4>Background</h4>
-          <p>I have an education in communication design and technology, which deepened my knowledge of front-end development and web design. This is what got me into Product Design.</p>
+          <p>I have an education in communication design and technology, which deepened my knowledge of front-end development and web design. That's what got me into UX in the first place.</p>
         </div>
         <div class="block">
           <h4>Academia</h4>
-          <p>I wrote my Master's thesis at IT University of Copenhagen on the role of pre-perception in decision-making. In particular, how visualisation can be used to leverage awareness and make decisions.</p>
+          <p>I wrote my Master's thesis at IT University of Copenhagen about pre-perception in decision-making, which explored data visualisation as a way to leverage awareness and make decisions really, really fast.</p>
         </div>
         <div class="block">
           <h4>CBS</h4>
-          <p>While in Copenhagen, I ran a "Communication Strategy, Online Media Marketing and Strategic Planning" practical course for a Master's degree class at the Copenhagen Business School (CBS).</p>
+          <p>While in Copenhagen, I ran a course on communication strategy and planning for the Interkulturel Markedskommunikation MA degree at the Copenhagen Business School (CBS).</p>
         </div>
       </div>
 
       <div class="wrapper triad">
         <div class="block">
           <h4>Design systems</h4>
-          <p>During my journey in DesignOps, I helped establish the first <a href="https://f36.contentful.com/" class="umami--click--f36" target="_blank">design system at Contentful</a>. I hosted <a href="http://designsystems.berlin/" class="umami--click--design-systems-berlin" target="_blank">Design Systems Berlin</a> for a while, too.</p>
+          <p>During my journey in DesignOps, I helped establish the first <a href="https://f36.contentful.com/" class="umami--click--f36" target="_blank">design system at Contentful</a>, and co-created and hosted <a href="http://designsystems.berlin/" class="umami--click--design-systems-berlin" target="_blank">Design Systems Berlin</a> for a while, too.</p>
         </div>
         <div class="block">
           <h4>Strengths</h4>
