--- a/index.html
+++ b/index.html
@@ -56,17 +56,16 @@
         <div class="tools block">
           <h3>Toolbox</h3>
           <ul>
-            <li>Coaching</li>
-            <li>Systems mapping</li>
+            <li>Mentoring</li>
+            <li>Talent development</li>
+            <li>Systems thinking</li>
+            <li>Stakeholder management</li>
+            <li>Conflict resolution</li>
+            <li>Priority assessment</li>
+            <li>Futures mapping</li>
             <li>Diagramming</li>
-            <li>Mindmapping</li>
-            <li>Rapid prototyping</li>
-            <li>Scenario mapping</li>
             <li>Journey mapping</li>
-            <li>Concept mapping</li>
             <li>Participatory design</li>
-            <li>Stakeholder mapping</li>
-            <li>Futures wheel</li>
           </ul>
         </div>
         <div class="experience block">
