Add Google Analytics again

--- a/index.html
+++ b/index.html
@@ -39,8 +39,16 @@
     <meta name="apple-mobile-web-app-title" content="">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <!-- Umami -->
-    <script async src="https://umami.joao.pt/script.js" data-website-id="4d4f157e-d006-47fc-8310-23f87f2f6ac1"></script>
+    <!-- Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6HKL7LLJ0J"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JN84W63VCK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-JN84W63VCK');
+    </script>
 
   </head>
   <body>
@@ -48,8 +56,8 @@
       <h1>I’m a design manager and mentor who guides teams using systems thinking and a dash of humour</h1>
       
       <div class="wrapper triad">
-        <p class="heading">At work, I'm at my best leveraging design articulation, connecting stakeholders with diagrams and design decks, and resolving ambiguity</p>
-        <p>I'm based in Berlin (Germany) with my wife, daughter, and <a href="https://www.instagram.com/itsgloriathedog/" data-umami-event="mutt" target="_blank">mutt</a>, and I have a knack for watching sunrises, reading about anthropology, riding boards, asking difficult questions, and making music and videos.</p>
+        <p class="heading">At work, I'm at my best enabling my teams, connecting stakeholders with diagrams and design decks, and resolving ambiguity</p>
+        <p>I'm based in Berlin (Germany) with my wife, daughters, and <a href="https://www.instagram.com/itsgloriathedog/" data-umami-event="mutt" target="_blank">mutt</a>, and I have a knack for watching sunrises, reading about anthropology, riding boards, asking difficult questions, and making music and videos.</p>
       </div>
       
       <div class="wrapper triad">
